# indproj

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  compile_commands.json
FMLCode/: CMakeLists.txt  compile_commands.json
FMLCode/inc/: Camera.h  FMLColor.h  FMLNormColor.h  FMLRenderer.h  FMLTexture.h  FMLWindow.h  FRect.h  Mesh.h  NormColor.h  Point.h  Rect.h  Renderer.h  Shape.h  Texture.h  TexturedQuad.h  UnfilledBox.h  Vector2.h
FMLCode/shaders/: fragment_shader.glsl  vertex_shader.glsl
FMLCode/src/: FMLNormColor.cpp  FMLRenderer.cpp  FMLTexture.cpp  FMLWindow.cpp  NormColor.cpp  Renderer.cpp  Shape.cpp  TexturedQuad.cpp  UnfilledBox.cpp  main.cpp
code/: .clang-format  3q  CMakeLists.txt  run.sh
code/inc/: Camera.h  Shader.h  Time.h
code/shaders/: fragment_shader.glsl  vertex_shader.glsl
code/shaders/lights/: fragment_shader.glsl
code/src/: Time.cpp  main.cpp
code/src/glad/: glad.c
code/src/old/: Mesh.cpp  Time.cpp  main.cpp
docs/: .gitignore  project_plan.tex  references.bib
docs/timesheet/: seger_sheet.csv
inc/: Shader.h
learnopenglproj/inc/: Time.h
learnopenglproj/src/old/: Model.cpp
renderer_code/inc/: Color.h  FRect.h  Font.h  Model.h  Rect.h  Renderer.h  Shader.h  Texture.h  TexturedQuad.h  Time.h  Window.h
renderer_code/src/: Renderer.cpp  Texture.cpp  Time.cpp  Window.cpp  main.cpp
src/: Renderer.cpp
